--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,7 +10,11 @@
 </head>
 
 <body>
-
+    <style>
+        .houses {
+            border-color: blueviolet;
+        }
+    </style>
     <!-- <script src="javascripts/login.js"></script> -->
 
     <header>
@@ -28,6 +32,7 @@
                 <h2>You have not registered any house on our website.</h2><br>
             <% } %>
             <% for(var x of houses) { %>
+                <div class="houses">
                 <% for(var p in x) { %>
                     <%if(x[p] && p!='HOUSE_ID' && p!='OWNER_ID' && p!='CATEGORY') { %>
                         <p><%=p%> : <%=x[p]%></p>
@@ -38,6 +43,28 @@
                     <button type="submit" value="<%=x['HOUSE_ID']%>" name="house_id">Edit info</button>
                     <button type="submit" formaction="/delete-house" formmethod="post" name="house_id" value="<%=x['HOUSE_ID']%>">Delete</button>
                 </form>
+                </div>
+                <br><br>
+            <% } %>
+        <% } else { %>
+            <% if(houses.length > 0) {%>
+                <h2>recommendations:</h2><br>
+            <% } else { %>
+                <h2>Your preferences did not help us to generate any recommendations :</h2><br>
+            <% } %>
+            <% for(var x of houses) { %>
+                <div class="houses">
+                <% for(var p in x) { %>
+                    <%if(x[p] && p!='HOUSE_ID' && p!='OWNER_ID' && p!='CATEGORY') { %>
+                        <p><%=p%> : <%=x[p]%></p>
+                    <% } %>
+                <% } %>
+                <!-- <form method="post" action="/update-house-info">
+                    <input type="number" name="category" style="display:none" value="<%=x['CATEGORY']%>">
+                    <button type="submit" value="<%=x['HOUSE_ID']%>" name="house_id">Edit info</button>
+                    <button type="submit" formaction="/delete-house" formmethod="post" name="house_id" value="<%=x['HOUSE_ID']%>">Delete</button>
+                </form> -->
+                </div>
                 <br><br>
             <% } %>
         <% } %>
@@ -51,6 +78,9 @@
         </p>
         <p>
             Want to create a new account? <a href="/create">Create one here</a>
+        </p>
+        <p>
+            <a href="/search">Advanced search</a>
         </p>
     </footer>
 
